# Zahuczkys-Aegisub-Scripts

./: .gitignore  DependencyControl.json  LICENSE  Readme.md  perspective.moon  zah.perspective.moon
.github/workflows/: depctrl.yml
autoclip/: .gitignore  LICENSE  README.md  ass_autoclip.pyproject  pyproject.toml  requirements.txt  zah.autoclip.lua
autoclip/ass_autoclip/: FrameSlider.qml  Hamburger.qml  ValueSlider.qml  __init__.py  __main__.py  autoclip.py  autoclip.qml  base.py  magic.py
autoclip/include/zah/autoclip/: autoclip.vpy
macros/: zah.aegi-color-track.lua  zah.autoclip.lua  zah.pers-mo.moon  zah.pers-mo_BETA.moon  zah.perspective.moon
macros/aegi-color-track/: zah.aegi-color-track.lua
macros/autoclip/: zah.autoclip.lua
macros/pers-mo_BETA/: zah.pers-mo_BETA.moon
misc/: prepare-commit-msg
miscellaneous_scripts/: zah.clipmove.lua  zah.dialblur.lua  zah.html_syntax.lua  zah.motionblur.lua  zah.shadshake.lua  zah.shapeshaker.lua  zah.tenkenbox.lua  zah.textshape.lua  zah.timeshake.lua
modules/zah/: deflatelua.lua  png.lua
modules/zah/ZF/2D/: clipper.lua  path.lua  paths.lua  point.lua  segment.lua  shape.lua
modules/zah/ZF/ass/: dialog.lua  fbf.lua  font.lua  line.lua
modules/zah/ZF/ass/tags/: layer.lua  tags.lua
modules/zah/ZF/util/: config.lua  math.lua  table.lua  util.lua
