[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ass-autoclip"
description = "ð“ªð“¾ð“½ð“¸ð“¶ð“ªð“°ð“²ð“¬ð“ªð“µð“µð”‚"
readme = "README.md"
requires-python = ">=3.8"
license = "BSD-3-Clause"
keywords = ["VapourSynth"]
authors = [
  { name = "Zahuczky", email = "zozicska@outlook.hu" },
  { name = "Akatsumekusa", email = "Akatsumekusa@protonmail.com" }
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Multimedia :: Video"
]
dependencies = [
  "vsmasktool>=1.1.2",
  "vstools>=2.3.0",
  "numpy>=1.24.3",
  "opencv-python>=4.8.0.74",
  "PySide6"
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/Zahuczky/Zahuczkys-Aegisub-Scripts"
Issues = "https://github.com/Zahuczky/Zahuczkys-Aegisub-Scripts/issues"
Source = "https://github.com/Zahuczky/Zahuczkys-Aegisub-Scripts"

[tool.hatch.version]
path = "ass_autoclip/__init__.py"

[tool.hatch.build]
include = [
  "ass_autoclip/*"
]
exclude = [
  "zah.autoclip.lua"
]
